--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,13 +14,14 @@
 }
 
 .App-header {
+  width: 100%;
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 0.5rem;
   color: white;
 }
 
